; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_sctp_cc_functions.c_sctp_cwnd_update_after_ecn_echo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_sctp_cc_functions.c_sctp_cwnd_update_after_ecn_echo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_tcb = type { i32 }
%struct.sctp_nets = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sctp_tcb*, %struct.sctp_nets*, i32, i32)* @sctp_cwnd_update_after_ecn_echo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sctp_cwnd_update_after_ecn_echo(%struct.sctp_tcb* %0, %struct.sctp_nets* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sctp_tcb*, align 8
  %6 = alloca %struct.sctp_nets*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.sctp_tcb* %0, %struct.sctp_tcb** %5, align 8
  store %struct.sctp_nets* %1, %struct.sctp_nets** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.sctp_tcb*, %struct.sctp_tcb** %5, align 8
  %10 = load %struct.sctp_nets*, %struct.sctp_nets** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @sctp_cwnd_update_after_ecn_echo_common(%struct.sctp_tcb* %9, %struct.sctp_nets* %10, i32 %11, i32 %12, i32 0)
  ret void
}

declare dso_local i32 @sctp_cwnd_update_after_ecn_echo_common(%struct.sctp_tcb*, %struct.sctp_nets*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
